force-app/main/default/objects/Conta_bancaria__c/Conta_bancaria__c.object-meta.xml
<CustomObject>
    <label>Conta bancária</label>
    <nameField>
        <label>Nome de Conta bancária</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contas bancárias</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>