force-app/main/default/objects/Conta_bancaria__c/fields/Agencia_bancaria__c.field-meta.xml
<CustomField>
    <fullName>Agencia_bancaria__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Agência bancária</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.Parent.RecordTypeId</field>
            <operation>equals</operation>
            <value>Agencia</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Agência bancária</relationshipLabel>
    <relationshipName>Contasbancarias</relationshipName>
    <type>Lookup</type>
</CustomField>