force-app/main/default/objects/Conta_bancaria__c/fields/Numero_agencia__c.field-meta.xml
<CustomField>
    <fullName>Numero_agencia__c</fullName>
    <formula>Conta__r.Numero_agencia__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Número da agência</label>
    <type>Text</type>
</CustomField>