force-app/main/default/objects/Conta_bancaria__c/fields/Numero_conta__c.field-meta.xml
<CustomField>
    <fullName>Numero_conta__c</fullName>
    <label>Número da conta</label>
    <length>50</length>
    <type>Text</type>
</CustomField>